Added dashboard grid configuring