@@ -138,6 +138,8 @@
                             <options>
                                 <option>-agentlib:jdwp=transport=dt_socket,server=y,suspend=y,address=*:5005</option>
                                 <option>--add-opens</option>
+                                <option>java.base/java.lang.reflect=com.jfoenix</option>
+                                <option>--add-opens</option>
                                 <option>javafx.graphics/javafx.css=ALL-UNNAMED</option>
                                 <option>--add-opens</option>
                                 <option>javafx.base/com.sun.javafx.runtime=ALL-UNNAMED</option>
@@ -159,6 +161,8 @@
                                 <option>javafx.base/com.sun.javafx.binding=com.jfoenix</option>
                                 <option>--add-exports</option>
                                 <option>javafx.graphics/com.sun.javafx.stage=com.jfoenix</option>
+                                <option>--add-exports</option>
+                                <option>javafx.graphics/com.sun.javafx.scene=com.jfoenix</option>
                                 <option>--add-exports</option>
                                 <option>javafx.base/com.sun.javafx.event=com.jfoenix</option>
                             </options>
